TYP: fix mypy for metadata (proposal)

--- a/mypy.ini
+++ b/mypy.ini
@@ -16,7 +16,7 @@ ignore_errors = True
 ignore_errors = True
 
 [mypy-xtgeo.metadata.*]
-ignore_errors = True
+ignore_errors = False
 
 [mypy-xtgeo.plot.*]
 ignore_errors = True
